--- a/pila.html
+++ b/pila.html
@@ -2,7 +2,7 @@
 
 <table class="MsoTable15Plain5" border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;mso-yfti-tbllook:1184;mso-padding-alt:0cm 5.4pt 0cm 5.4pt">
  <tbody><tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-bottom:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-bottom:solid #7F7F7F 1.0pt;
   mso-border-bottom-themecolor:text1;mso-border-bottom-themetint:128;
   mso-border-bottom-alt:solid #7F7F7F .5pt;mso-border-bottom-themecolor:text1;
   mso-border-bottom-themetint:128;background:white;mso-background-themecolor:
@@ -14,7 +14,7 @@
   &quot;Times New Roman&quot;;mso-fareast-language:ES">ID</span></i></b><i><span style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif;
   mso-fareast-font-family:&quot;Times New Roman&quot;;mso-fareast-language:ES"><o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;border:none;border-bottom:solid #7F7F7F 1.0pt;
+  <td width="97" valign="top" style="width:72.85pt;border:none;border-bottom:solid #7F7F7F 1.0pt;
   mso-border-bottom-themecolor:text1;mso-border-bottom-themetint:128;
   mso-border-bottom-alt:solid #7F7F7F .5pt;mso-border-bottom-themecolor:text1;
   mso-border-bottom-themetint:128;background:white;mso-background-themecolor:
@@ -65,7 +65,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -74,7 +74,7 @@
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
   mso-fareast-language:ES"><o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;background:#F2F2F2;mso-background-themecolor:
+  <td width="97" valign="top" style="width:72.85pt;background:#F2F2F2;mso-background-themecolor:
   background1;mso-background-themeshade:242;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   8.0pt;margin-left:0cm;text-align:justify;line-height:115%;mso-yfti-cnfc:64"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como gerente</span><span style="font-size:12.0pt;line-height:115%;
@@ -102,7 +102,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -111,7 +111,7 @@
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
   mso-fareast-language:ES"><o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;padding:0cm 5.4pt 0cm 5.4pt">
+  <td width="97" valign="top" style="width:72.85pt;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   8.0pt;margin-left:0cm;text-align:justify;line-height:115%"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como gerente</span><span style="font-size:12.0pt;line-height:115%;
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
@@ -139,7 +139,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -148,7 +148,7 @@
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
   mso-fareast-language:ES"><o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;background:#F2F2F2;mso-background-themecolor:
+  <td width="97" valign="top" style="width:72.85pt;background:#F2F2F2;mso-background-themecolor:
   background1;mso-background-themeshade:242;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   8.0pt;margin-left:0cm;text-align:justify;line-height:115%;mso-yfti-cnfc:64"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como gerente</span><span style="font-size:12.0pt;line-height:115%;
@@ -176,7 +176,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -185,7 +185,7 @@
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
   mso-fareast-language:ES"><o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;padding:0cm 5.4pt 0cm 5.4pt">
+  <td width="97" valign="top" style="width:72.85pt;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   8.0pt;margin-left:0cm;text-align:justify;line-height:115%"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como monitor</span><span style="font-size:12.0pt;line-height:115%;
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
@@ -212,7 +212,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -221,7 +221,7 @@
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
   mso-fareast-language:ES"><o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;background:#F2F2F2;mso-background-themecolor:
+  <td width="97" valign="top" style="width:72.85pt;background:#F2F2F2;mso-background-themecolor:
   background1;mso-background-themeshade:242;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   8.0pt;margin-left:0cm;text-align:justify;line-height:115%;mso-yfti-cnfc:64"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como cliente</span><span style="font-size:12.0pt;line-height:115%;
@@ -248,7 +248,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -257,7 +257,7 @@
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
   mso-fareast-language:ES"><o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;padding:0cm 5.4pt 0cm 5.4pt">
+  <td width="97" valign="top" style="width:72.85pt;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   8.0pt;margin-left:0cm;text-align:justify;line-height:115%"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como cliente</span><span style="font-size:12.0pt;line-height:115%;
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
@@ -284,7 +284,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -293,7 +293,7 @@
   font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
   mso-fareast-language:ES"><o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;background:#F2F2F2;mso-background-themecolor:
+  <td width="97" valign="top" style="width:72.85pt;background:#F2F2F2;mso-background-themecolor:
   background1;mso-background-themeshade:242;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
@@ -319,7 +319,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -327,7 +327,7 @@
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
   115%;mso-yfti-cnfc:4"><i><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">US 08<o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;padding:0cm 5.4pt 0cm 5.4pt">
+  <td width="97" valign="top" style="width:72.85pt;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   8.0pt;margin-left:0cm;text-align:justify;line-height:115%"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como cliente registrado</span><span style="font-size:12.0pt;line-height:
   115%;font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:&quot;Times New Roman&quot;;
@@ -354,7 +354,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -362,7 +362,7 @@
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
   115%;mso-yfti-cnfc:68"><i><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">US 09<o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;background:#F2F2F2;mso-background-themecolor:
+  <td width="97" valign="top" style="width:72.85pt;background:#F2F2F2;mso-background-themecolor:
   background1;mso-background-themeshade:242;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
@@ -388,7 +388,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -396,7 +396,7 @@
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
   115%;mso-yfti-cnfc:4"><i><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">US 10<o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;padding:0cm 5.4pt 0cm 5.4pt">
+  <td width="97" valign="top" style="width:72.85pt;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
   115%"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como cliente registrado<o:p></o:p></span></p>
@@ -419,15 +419,15 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
-  115%;mso-yfti-cnfc:68"><i><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">ºUS 11<o:p></o:p></span></i></p>
+  115%;mso-yfti-cnfc:68"><i><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">US 11<o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;background:#F2F2F2;mso-background-themecolor:
+  <td width="97" valign="top" style="width:72.85pt;background:#F2F2F2;mso-background-themecolor:
   background1;mso-background-themeshade:242;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
@@ -455,7 +455,7 @@
   </td>
  </tr>
  <tr>
-  <td width="66" valign="top" style="width:49.65pt;border:none;border-right:solid #7F7F7F 1.0pt;
+  <td width="57" valign="top" style="width:42.55pt;border:none;border-right:solid #7F7F7F 1.0pt;
   mso-border-right-themecolor:text1;mso-border-right-themetint:128;mso-border-right-alt:
   solid #7F7F7F .5pt;mso-border-right-themecolor:text1;mso-border-right-themetint:
   128;background:white;mso-background-themecolor:background1;padding:0cm 5.4pt 0cm 5.4pt">
@@ -463,7 +463,7 @@
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
   115%;mso-yfti-cnfc:4"><i><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">US 12<o:p></o:p></span></i></p>
   </td>
-  <td width="88" valign="top" style="width:65.75pt;padding:0cm 5.4pt 0cm 5.4pt">
+  <td width="97" valign="top" style="width:72.85pt;padding:0cm 5.4pt 0cm 5.4pt">
   <p class="MsoNormal" style="margin-top:12.0pt;margin-right:0cm;margin-bottom:
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:justify;line-height:
   115%"><span style="font-size: 12pt; line-height: 115%; font-family: 'Times New Roman', serif;">Como gerente<o:p></o:p></span></p>
