actualizacion en pila e historias cucumber

--- a/historias cucumber.html
+++ b/historias cucumber.html
@@ -1,4 +1,4 @@
-ï»¿<html>
+<html>
 	<head>
 		<style>
 			table {
@@ -33,22 +33,22 @@
 	<body>
 		<font face="monospace">
 			<div class="divspoiler">
-			<a href="javascript:void(0);" onclick="if (this.parentNode.nextSibling.childNodes[0].style.display != '') { this.parentNode.nextSibling.childNodes[0].style.display = ''; } else { this.parentNode.nextSibling.childNodes[0].style.display = 'none';}" ><h3 style="color:#0A7D4B">US01 Gestionar informaciÃ³n de monitores</h3></a>
+			<a href="javascript:void(0);" onclick="if (this.parentNode.nextSibling.childNodes[0].style.display != '') { this.parentNode.nextSibling.childNodes[0].style.display = ''; } else { this.parentNode.nextSibling.childNodes[0].style.display = 'none';}" ><h3 style="color:#0A7D4B">US01 Gestionar información de monitores</h3></a>
 			</div><div><div class="spoiler" style="display: none;">
 				<table>
 				<tr><td>
-				<b>Feature:</b> Gestionar informaciÃ³n de monitores<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Para poder gestionar informaciÃ³n de monitores<br>
+				<b>Feature:</b> Gestionar información de monitores<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Para poder gestionar información de monitores<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Un gerente<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiene que poder aÃ±adir, listar, modificar y borrar los monitores del sistema<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiene que poder añadir, listar, modificar y borrar los monitores del sistema<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Dar de alta un nuevo monitor<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo doy de alta un nuevo monitor<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a ver al nuevo monitor en el sistema.<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería ver al nuevo monitor en el sistema.<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Listar monitores<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo voy al apartado de monitores en el sistema<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a ver la lista de los monitores dados de alta.<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería ver la lista de los monitores dados de alta.<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Modificar un monitor<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo modifico los datos de un monitor<br>
@@ -56,25 +56,25 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Dar de baja un monitor<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo doy de baja a un monitor<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo no deberÃ­a ver al monitor en el sistema<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo no debería ver al monitor en el sistema<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
 			<br>
 
 			<div class="divspoiler">
-			<a href="javascript:void(0);" onclick="if (this.parentNode.nextSibling.childNodes[0].style.display != '') { this.parentNode.nextSibling.childNodes[0].style.display = ''; } else { this.parentNode.nextSibling.childNodes[0].style.display = 'none';}" ><h3 style="color:#0A7D4B">US02 Gestionar informaciÃ³n de actividades</h3></a>
+			<a href="javascript:void(0);" onclick="if (this.parentNode.nextSibling.childNodes[0].style.display != '') { this.parentNode.nextSibling.childNodes[0].style.display = ''; } else { this.parentNode.nextSibling.childNodes[0].style.display = 'none';}" ><h3 style="color:#0A7D4B">US02 Gestionar información de actividades</h3></a>
 			</div><div><div class="spoiler" style="display: none;">
 				<table>
 				<tr><td>
-				<b>Feature:</b> Gestionar informaciÃ³n de actividades<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Para poder gestionar informaciÃ³n de actividades<br>
+				<b>Feature:</b> Gestionar información de actividades<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Para poder gestionar información de actividades<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Un gerente<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiene que poder aÃ±adir, listar, modificar y borrar las actividades del sistema<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiene que poder añadir, listar, modificar y borrar las actividades del sistema<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Dar de alta una nueva actividad<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo doy de alta una actividad nueva<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a ver la nueva actividad en el sistema.<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería ver la nueva actividad en el sistema.<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Listar actividades<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo voy al apartado de actividades en el sistema<br>
@@ -86,29 +86,29 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Dar de baja una actividad<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo doy de baja a una actividad<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo no deberÂ´Ã­a ver la actividad en el sistema<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo no deber´ía ver la actividad en el sistema<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
 			<br>
 
 			<div class="divspoiler">
-			<a href="javascript:void(0);" onclick="if (this.parentNode.nextSibling.childNodes[0].style.display != '') { this.parentNode.nextSibling.childNodes[0].style.display = ''; } else { this.parentNode.nextSibling.childNodes[0].style.display = 'none';}" ><h3 style="color:#0A7D4B">US03 Gestionar informaciÃ³n de reservas</h3></a>
+			<a href="javascript:void(0);" onclick="if (this.parentNode.nextSibling.childNodes[0].style.display != '') { this.parentNode.nextSibling.childNodes[0].style.display = ''; } else { this.parentNode.nextSibling.childNodes[0].style.display = 'none';}" ><h3 style="color:#0A7D4B">US03 Gestionar información de reservas</h3></a>
 			</div><div><div class="spoiler" style="display: none;">
 				<table>
 				<tr><td>
-				<b>Feature:</b> Gestionar informaciÃ³n de reservas<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Para poder gestionar informaciÃ³n de reservas<br>
+				<b>Feature:</b> Gestionar información de reservas<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Para poder gestionar información de reservas<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Un gerente<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiene que poder aceptar, rechazar y listar las reservas del sistema<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Aceptar una reserva<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo acepto la reserva pendiente<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a ver la reserva como aceptada.<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería ver la reserva como aceptada.<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Rechazar una reserva<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo rechazo la reserva pendiente<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a ver la reserva como rechazada<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería ver la reserva como rechazada<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> listar las reservas<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo voy al apartado de las reservas<br>
@@ -137,19 +137,19 @@
 			<br>
 			
 			<div class="divspoiler">
-			<a href="javascript:void(0);" onclick="if (this.parentNode.nextSibling.childNodes[0].style.display != '') { this.parentNode.nextSibling.childNodes[0].style.display = ''; } else { this.parentNode.nextSibling.childNodes[0].style.display = 'none';}" ><h3 style="color:#0A7D4B">US05 Recibir informaciÃ³n de la reserva</h3></a>
+			<a href="javascript:void(0);" onclick="if (this.parentNode.nextSibling.childNodes[0].style.display != '') { this.parentNode.nextSibling.childNodes[0].style.display = ''; } else { this.parentNode.nextSibling.childNodes[0].style.display = 'none';}" ><h3 style="color:#0A7D4B">US05 Recibir información de la reserva</h3></a>
 			</div><div><div class="spoiler" style="display: none;">
 				<table>
 				<tr><td>
-				<b>Feature:</b> Recibir informaciÃ³n de la reserva<br>
+				<b>Feature:</b> Recibir información de la reserva<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Para tener una copia de los datos de la reserva<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Un cliente<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Necesita recibir la informaciÃ³n de la reserva<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Recibo la informaciÃ³n por email y PDF<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Relleno los datos de la reserva de PiragÃ¼ismo<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>And </b>activo la opciÃ³n de ser notificado por PDF<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Necesita recibir la información de la reserva<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Recibo la información por email y PDF<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Relleno los datos de la reserva de Piragüismo<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>And </b>activo la opción de ser notificado por PDF<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Realizo la reserva<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> DeberÃ­a recibir un email con la informaciÃ³n de reserva<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Debería recibir un email con la información de reserva<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>And</b> un PDF adjunto con los datos de la reserva en formato PDF<br><br><br>
 				</td></tr>
 				</table>
@@ -168,9 +168,9 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Consultar actividades<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Estoy logueado como cliente<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Consulto las actividades<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> DeberÃ­a ver las actividades de PiragÃ¼ismo y Rafting<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>And</b> junto con la informaciÃ³n de las mismas<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>And</b> la opciÃ³n de reservarlas<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Debería ver las actividades de Piragüismo y Rafting<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>And</b> junto con la información de las mismas<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>And</b> la opción de reservarlas<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
@@ -187,8 +187,8 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiene que poder registrarse<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Registrar cliente<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo no estoy registrado<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo me doy de <br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a poder comentar y reservar actividades y podrÃ© recibir ofertas.<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo me doy de alta<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería poder comentar y reservar actividades y podré recibir ofertas.<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
@@ -206,7 +206,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Reservar Actividades<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy registrado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo reserve la actividad<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> El sistema deberÃ­a realizar y registrar mi reserva<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> El sistema debería realizar y registrar mi reserva<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
@@ -224,7 +224,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Recibir Ofertas<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy registrado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> El sistema reciba una nueva oferta<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> El sistema deberÃ­a notificarme de la oferta<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> El sistema debería notificarme de la oferta<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
@@ -242,11 +242,11 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Comentar un actividad<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo he realizado una actividad y la comento<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a ver el comentario<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería ver el comentario<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Puntuar una actividad<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo he realizado una actividad y la puntuo<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a ver la la puntuacion actual de la actividad<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería ver la la puntuacion actual de la actividad<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
@@ -264,7 +264,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Ver calendario<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo estoy logueado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo voy al apartado de mi horario<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo deberÃ­a ver un calendario con mis actividades asignadas<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería ver un calendario con mis actividades asignadas<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
