--- a/historias cucumber.html
+++ b/historias cucumber.html
@@ -1,3 +1,4 @@
+
 <html>
 	<head>
 		<style>
@@ -188,7 +189,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Scenario:</b> Registrar cliente<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Given</b> Yo no estoy registrado<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>When</b> Yo me doy de alta<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería poder comentar y reservar actividades y podré recibir ofertas.<br><br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Then</b> Yo debería poder iniciar sesión en la web<br><br><br>
 				</td></tr>
 				</table>
 			</div></div>
